<resources>
    <string name="app_name">zjcUtils</string>
    <string name="tool_name">zjcTools</string>

    <string name="z_loading">正在加载...</string>
    <string name="z_i_know">我知道了</string>
    <string name="z_btn_cancel">取消</string>
    <string name="z_btn_ok">确定</string>
    <string name="z_btn_next">下一步</string>
    <string name="z_btn_reject">拒绝</string>
    <string name="z_btn_go_to_setting">去设置</string>
    <string name="z_permission_again_reason">您拒绝了 %1$s 权限, %2$s</string>
    <!--权限相关-->
    <string name="z_permission_title">申请权限</string>
    <string name="z_permission_reason">为了你能正常使用应用，请授予以下权限</string>
    <string name="z_permission_again_title">申请 %s</string>
    <string name="z_permission_denied_setting">"由于 %1$s 无法获取 %2$s, 程序无法正常运行, 请开启权限后再使用。\n\n设置路径: 应用管理->%3$s->权限"</string>

    <string name="z_camera">相机</string>
    <string name="z_pick_complete">完成</string>
    <string name="z_pick_complete_select">完成(%1$d/%2$d)</string>
    <string name="z_pick_preview">预览</string>
    <string name="z_pick_preview_count">预览(%1$d)</string>
    <string name="z_pick_origin">原图</string>
    <string name="z_pick_origin_size">原图(%1$s)</string>
    <string name="z_pick_all_picture">所有图片</string>
    <string name="z_pick_folder_picture_count">共%1$d张</string>
    <string name="z_pick_preview_picture_count">%1$d/%2$d</string>
    <string name="z_pick_select_limit">最多选择 %1$d 张图片</string>
    <string name="z_pick_crop_picture">图片裁剪</string>
    <string name="z_pick_picture">图片选择</string>

    <string name="z_progress_wait">请稍等...</string>
    <string name="z_input_default_toast">请输入内容</string>


    <string name="btn_save">保存</string>
    <string name="btn_submit">提交</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_publish">发布</string>




    <!--  title of activity -->
    <string name="picker_str_title_all">图片和视频</string>
    <string name="picker_str_title_video">视频选择</string>
    <string name="picker_str_title_image">图片选择</string>
    <string name="picker_str_title_right">完成</string>

    <!--  title of crop activity -->
    <string name="picker_str_title_crop">图片剪裁</string>
    <string name="picker_str_title_crop_right">确定</string>

    <!--  state of multiCrop activity -->
    <string name="picker_str_redBook_full">充满</string>
    <string name="picker_str_redBook_gap">留白</string>

    <!--  bottom of activity -->
    <string name="picker_str_bottom_preview">预览</string>
    <string name="picker_str_bottom_original">原图</string>
    <string name="picker_str_bottom_choose">选择</string>

    <!--  folder item text -->
    <string name="picker_str_folder_item_all">图片和视频</string>
    <string name="picker_str_folder_item_video">所有视频</string>
    <string name="picker_str_folder_item_image">所有图片</string>
    <string name="picker_str_folder_image_unit">张</string>

    <!--  camera item text -->
    <string name="picker_str_item_take_video">拍摄视频</string>
    <string name="picker_str_item_take_photo">拍摄照片</string>

    <!--  permission -->
    <string name="picker_str_camera_permission">您拒绝了拍照权限，如拒绝设置会导致该功能无法使用!是否前去设置？</string>
    <string name="picker_str_storage_permission">您拒绝了存储权限，如拒绝设置会导致该功能无法使用!是否前去设置？</string>
    <string name="picker_str_permission_refuse_setting">拒绝设置</string>
    <string name="picker_str_permission_go_setting">前去设置</string>

    <!--  tip -->
    <string name="picker_str_tip_mimeTypes_empty">请至少选择一种文件加载类型!</string>
    <string name="picker_str_tip_singleCrop_error">剪裁异常，已为您重置图片，请重试！</string>
    <string name="picker_str_tip_shield">该文件已选过或无法选择!</string>
    <string name="picker_str_tip_media_empty">暂未发现媒体文件</string>
    <string name="picker_str_tip_only_select_image">只能选择图片!</string>
    <string name="picker_str_tip_only_select_video">只能选择视频!</string>
    <string name="picker_str_str_video_over_max_duration">视频时长不得超过</string>
    <string name="picker_str_tip_video_less_min_duration">视频时长不得少于</string>
    <string name="picker_str_tip_cant_preview_video">不支持预览视频！</string>
    <string name="picker_str_tip_only_select_one_video">只能选择一个视频!</string>
    <string name="picker_str_tip_action_frequently">请勿操作过快!</string>

    <!--  time format -->
    <string name="picker_str_today">今天</string>
    <string name="picker_str_this_week">本周</string>
    <string name="picker_str_this_months">这个月</string>
    <string name="picker_str_time_format">yyyy年MM月</string>
    <string name="picker_str_day">天</string>
    <string name="picker_str_hour">小时</string>
    <string name="picker_str_minute">分钟</string>
    <string name="picker_str_second">秒</string>
    <string name="picker_str_milli">毫秒</string>
    <string name="picker_str_preview_empty">预览数据为空！</string>

</resources>
