<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/z_theme_background">

    <com.android.zjctools.widget.ZTopBar
        android:id="@+id/z_common_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:zv_end_btn="@string/z_pick_complete"
        app:zv_icon="@drawable/z_ic_back_color"
        app:zv_title_color="@color/z_title"
        app:zv_title="@string/z_pick_picture" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/z_common_top_bar">

        <View
            android:id="@+id/z_pick_grid_bottom_space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/z_dimen_0"
            android:layout_alignParentBottom="true" />

        <RelativeLayout
            android:id="@+id/z_pick_grid_bottom_bar_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/z_dimen_48"
            android:layout_above="@+id/z_pick_grid_bottom_space">

            <RelativeLayout
                android:id="@+id/z_pick_grid_choose_folder_rl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/z_padding_large"
                android:paddingRight="@dimen/z_padding_large">

                <TextView
                    android:id="@+id/z_pick_grid_choose_folder_tv"
                    style="@style/ZText.Menu"
                    android:layout_centerVertical="true"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:minWidth="@dimen/z_dimen_96"
                    android:text="@string/z_pick_all_picture" />

                <ImageView
                    android:layout_width="@dimen/z_dimen_12"
                    android:layout_height="@dimen/z_dimen_12"
                    android:layout_alignBottom="@id/z_pick_grid_choose_folder_tv"
                    android:layout_toRightOf="@id/z_pick_grid_choose_folder_tv"
                    android:src="@drawable/z_ic_triangle_indicator"
                    android:tint="@color/zGray54" />
            </RelativeLayout>

            <TextView
                android:id="@+id/z_pick_grid_preview_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/z_padding_large"
                android:paddingRight="@dimen/z_padding_large"
                android:text="@string/z_pick_preview"
                android:textAllCaps="false"
                android:textStyle="normal" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/z_pick_grid_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/z_pick_grid_bottom_bar_rl" />
    </RelativeLayout>
</RelativeLayout>
