<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/zWhite"
    tools:context="com.android.zjctools.widget.dialog.ZPDialog">

    <TextView
        android:id="@+id/z_dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/z_dimen_16"
        android:text="@string/app_name"
        android:textColor="@color/z_black_87"
        android:textSize="@dimen/z_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/z_dialog_content_et"
        android:layout_width="@dimen/z_dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/z_dimen_24"
        android:layout_marginRight="@dimen/z_dimen_24"
        android:background="@drawable/z_shape_input_dark_bg_shape"
        android:gravity="start"
        android:hint="请输入"
        android:lines="4"
        android:padding="@dimen/z_dimen_10"
        android:textColor="@color/z_black_87"
        android:textSize="@dimen/z_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/z_dialog_title_tv" />

    <TextView
        android:id="@+id/z_dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/z_dimen_24"
        android:layout_marginTop="@dimen/z_dimen_36"
        android:layout_marginEnd="@dimen/z_dimen_8"
        android:layout_marginBottom="@dimen/z_dimen_20"
        android:background="@drawable/z_shape_conner4_app_theme"
        android:paddingStart="@dimen/z_dimen_24"
        android:paddingTop="@dimen/z_dimen_8"
        android:paddingEnd="@dimen/z_dimen_24"
        android:paddingBottom="@dimen/z_dimen_8"
        android:text="@string/z_btn_cancel"
        android:textColor="@color/zWhite"
        android:textSize="@dimen/z_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/z_dialog_confirm_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/z_dialog_content_et" />

    <TextView
        android:id="@+id/z_dialog_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/z_dimen_8"
        android:layout_marginTop="@dimen/z_dimen_36"
        android:layout_marginEnd="@dimen/z_dimen_24"
        android:layout_marginBottom="@dimen/z_dimen_20"
        android:background="@drawable/z_shape_conner4_app_theme"
        android:paddingStart="@dimen/z_dimen_24"
        android:paddingTop="@dimen/z_dimen_8"
        android:paddingEnd="@dimen/z_dimen_24"
        android:paddingBottom="@dimen/z_dimen_8"
        android:text="@string/z_btn_ok"
        android:textColor="@color/zWhite"
        android:textSize="@dimen/z_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/z_dialog_cancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/z_dialog_content_et" />
</androidx.constraintlayout.widget.ConstraintLayout>